fix(app): normalize spacing like in challenges

--- a/mon-pix/app/styles/pages/_skill-review.scss
+++ b/mon-pix/app/styles/pages/_skill-review.scss
@@ -138,7 +138,7 @@
 .skill-review-retry {
 
   &__message {
-    margin-bottom: $spacing-s;
+    margin: 1em 0;
   }
 
   &__button {
